--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <p>You know you want to knit with this...</p>
       </section>
     </section>
-  <script src="./modules/index.js" type="modules"></script>
+  <script src="./modules/index.js" type="module"></script>
   </body>
 
 </html>
